# python

./: .gitignore  README.md
AWS/: README.md  lf_context_based_task_invocation.py  lf_event_context_obj_output.py  lf_order_info.py  sns_publish_message_to_sns.py
AccessWeb/: actual-data-ass1.txt  ass1.py  ass2-socket.py  ass3-followinglinks.py  ass3-scrape.py  ass4.py  ass5-geojson.py  ass5-imported.py  ass5-jason-count.py
AlgorithmicToolbox/: TestFile.py
Cartoon_transform/: main.py
Clock/: main.py
DataDog/: README.md  tls_check.py
Databases_py/: ass-roster-db.sqlite  ass-roster.py  ass-tracks-db.py  email-db-count.py  emaildb.sqlite  geodata.sqlite  org-db-count.py  org-db.sqlite  roster_data.json  rosterdb.sqlite  sql1.db  track-db.sqlite  where.data  where.js
FileHandle/: police-func.txt  police-txtfile.py  police.txt  read-police.py
Google_I_O/: Candy.py  Centauri_Prime.py  Speed_Typing.py
QR/: main.py
URL_shortener/: main.py
YTDownloader/: downloader.py
ai_agents/: .env.example  README.md  sample.py
async_projects/: async_api_polling.py  concurrent_data_downloader.py  web_scraper.py
binaries/: addArguments.py
dunder_methods/: age.py
gitlab_proj/: Deployment-Strategies.md  Dockerfile  README.md  app.py  gitlab-ci_file-optimized.yml  gitlab-ci_file.yml  main.py  requirements.txt  test_app.py
hangman/: draw_hangman.py  hangman.py
karatechop/: karatechop.py  karatechop_untitest.py
letter_combinations/: letter-combinations.py
module_test/: main.py
oop/: README.md  __init__.py  (+42 more)
oop/packaging/: poetry_pyproject.toml  pyproject.toml
(+150 files in other folders)
